--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <script src="js/jquery.min.js"></script>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <p>Score: <span id="score-value">0</span></p>
 </body>
 </html>
